Refactor to be more functional